# airtable-enrich

./: .editorconfig  .mypy  README.md  pyproject.toml
airtable-enrich/: cli.py
airtable-enrinch/: cli.py
